[metadata]
name = plurk.py
version = 0.0.1
author = James Chien
author_email = shc261392@gmail.com
description = An unofficial Plurk API 2.0 SDK for Python 3.7+.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = plurk, oauth
url = https://github.com/shc261392/plurk.py
classifiers =
    Development Status :: 3 - Alpha,
    Intended Audience :: Developers,
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir=
    =src
zip_safe = True
python_requires = >=3.7
packages = find:
install_requires =
    authlib
    httpx
    pydantic

[options.packages.find]
where = src
exclude = docs tests

[options.extras_require]
tests =
    tox

docs =
    sphinx

[coverage:run]
branch = True
source = plurk

[coverage:paths]
source =
   src
   .tox/*/site-packages

[pylint.message_control]
disable=
    broad-except,
    import-error,
    invalid-name,
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-few-public-methods,
    too-many-arguments,

[flake8]
max-line-length = 120
max-complexity = 10
exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache,venv,.venv

[tox:tox]
envlist=
    py37, py38, py39,py310, flake8, pylint, bandit

[testenv]
deps = 
    coverage
    pytest
    pytest-mock
    pytest-httpx
    pydantic_factories
    -r {tox_root}/requirements.txt
commands =
    coverage run -p -m pytest tests

[testenv:test]
description = run the test suite with pytest

[testenv:report]
deps = coverage
skip_install = true
commands =
    coverage combine
    coverage report -m
    coverage html

[testenv:flake8]
skip_install = true
deps = 
    flake8
commands =
    flake8 {tox_root}/src --statistics --count --show-source

[testenv:pylint]
skip_install = true
deps =
    pylint
commands =
    pylint src

[testenv:bandit]
skip_install = true
deps =
    bandit
commands =
    bandit -r src
